apps/drone/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drone
  labels:
    component: drone
