apps/drone/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: drone
  namespace: drone
  labels:
    component: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone
  serviceName: drone
  template:
    metadata:
      labels:
        app: drone
    spec:
      containers:
        - image: drone/drone:1.10.1
          name: drone
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
