apps/drone/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: drone
  labels:
    component: drone
spec:
  ports:
    - port: 80
      name: web
  selector:
    app: drone
